--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -776,11 +776,11 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${ZOLTAN_HEADERS})
 install(FILES ${LIB_INCLUDE_FILES}
         DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 
-
-install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}
-        EXPORT ${PROJECT_NAME}
-        INCLUDES DESTINATION "include"
-)
+#
+#install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}
+#        EXPORT ${PROJECT_NAME}
+#        INCLUDES DESTINATION "include"
+#)
 
 install(EXPORT "${PROJECT_NAME}"
         FILE "${PROJECT_NAME}.cmake"
