static lib export

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -597,9 +597,9 @@ file(GLOB_RECURSE TIMER_SOURCES
         "${PROJECT_SOURCE_DIR}/timer/*.c"
 )
 
-list(APPEND NOINSTALLHEADERS ${SIMPLE_HEADERS})
+list(APPEND NOINSTALLHEADERS ${TIMER_HEADERS})
 
-list(APPEND SOURCES ${SIMPLE_SOURCES})
+list(APPEND SOURCES ${TIMER_SOURCES})
 
 #APPEND_SET(NOINSTALLHEADERS
 #  timer/timer_const.h
